  - Added support for non-Unicode (e.g. binary) writer output.

* docutils/parsers/null.py: Added to project; a do-nothing parser.

* docutils/parsers/rst/__init__.py:

  - Added validator to tab_width setting, with test.  Closes SF bug
    #1212515, report from Wu Wei.

* docutils/parsers/rst/states.py:

  - Fixed bug with escaped colons indicating a literal block.

* docutils/parsers/rst/directives/misc.py:

  - Added the "default-role" and "title" directives.
  - Added standard data file syntax to the "include" directive.

* docutils/parsers/rst/directives/images.py:

  - Added support for image width and height units.

* docutils/parsers/rst/include/: Directory added to project; contains
  standard data files for the "include" directive.  Initial contents:
  character entity substitution definition sets.

* docutils/readers/doctree.py: Added to project; a reader for existing
  document trees.

* docutils/transforms/__init__.py:

  - Added ``Transformer.reprocess_transforms`` attribute.

* docutils/transforms/html.py: Added to project; transforms specific
  to the html4css1 Writer.

* docutils/transforms/misc.py:

  - Added misc.Transitions transform, extracted from
    universal.FinalChecks.

* docutils/transforms/references.py:

  - Added references.DanglingReferences transform, extracted from
    universal.FinalChecks.

* docutils/transforms/universal.py:

  - Added universal.ExposeInternals transform, extracted from
    universal.FinalChecks.
  - Removed universal.FinalChecks transform (logic has been moved to
    several new transforms).

* docutils/writers/html4css1.py:

  - Added support for image width and height units.
  - Made ``xmlcharrefreplace`` the default output encoding error
    handler.
  - A warning is now issued if neither ``--stylesheet`` nor
    ``--stylesheet-path`` is specified.
  - Made ``--embed-stylesheet`` the default rather than
    ``--link-stylesheet``.
  - Added writer-specific transform to check the stylesheet setting.
